# INMOST_ICE

./: CMakeLists.txt  README.md
Coastline/: arctic_crude.txt  arctic_intermediate.txt  arctic_low.txt
Domain_generator/: .cproject  .project  plot_external.py  plot_external_parts.py  plot_islands.py
Domain_generator/Closure/: .cproject  .project  Makefile  coords_rotation.h  main.cpp  plot_external.py
Domain_generator/Coarsening/: Makefile  contours_coarsening.h  coords_rotation.h  main.cpp  plot_external_coarsened.py  plot_full_coarsened.py  plot_islands_coarsened.py
Domain_generator/Merging/: .project  Makefile  contours_merging.h  main.cpp  plot_external_parts.py  plot_islands.py
Programs/EXAMPLE_PROJ4/: CMakeLists.txt  main.cpp
Programs/GET_VARA/intel/: CMakeLists.txt
Programs/GRID_TO_PMF/intel/: CMakeLists.txt  main.cpp
Programs/ICE_2/gnu/: CMakeLists.txt
Programs/ICE_2/intel/: CMakeLists.txt  main.cpp
Programs/MODEL_TO_GEO/: CMakeLists.txt  coords_rotation.h  main.cpp
Programs/MODEL_TO_GEO_TEMPS/: CMakeLists.txt  main.cpp
Programs/NETCDF_TEST/: CMakeLists.txt  config.h  main.cpp  netcdf_INMOST.cpp  netcdf_INMOST.h
Programs/NEW_COMPILER_TEST/: CMakeLists.txt  main.cpp
Programs/PARTITION/intel/: CMakeLists.txt  INMOST_ICE_mesh.cpp  INMOST_ICE_mesh.h  config.h  coords_rotation.h  main.cpp
Programs/PNETCDF_INPUT/: CMakeLists.txt  main.cpp
Programs/PNETCDF_READ/intel/: CMakeLists.txt  main.cpp
Programs/PUT_VARA/intel/: CMakeLists.txt  put_vara.cpp
Source/: CMakeLists.txt  ice_model.cpp  main.cpp
Source/Headers/: CMakeLists.txt  config.h  coords_rotation.h  hello_world.h  inmost_ice.h  interpolators.h  mesh.h  nodes.h  services.h  triangles.h
Source/HelloWorld/: CMakeLists.txt  hello_world.cpp
Source/Interpolation/: CMakeLists.txt  cams_interpolation.cpp  interpolators.cpp  topaz_coords.cpp  topaz_interpolation.cpp
Source/Mesh/: CMakeLists.txt  mesh.cpp  nodes.cpp  triangles.cpp
Source/Services/: CMakeLists.txt  linetrim.cpp  triancalcs.cpp
Source/Solver/: CMakeLists.txt
Source/Thermodynamics/: CMakeLists.txt
Transport/Transport_local_basis/: CMakeLists.txt
Transport/Transport_spherical_coords/: Advection.cpp  Assembling.cpp  Assembling.h  CMakeLists.txt  Errors.cpp  Function.cpp  Function.h  INMOST_ICE_mesh.cpp  INMOST_ICE_mesh.h  MatVec.cpp  MatVec.h  Numerical.cpp  main.cpp
Transport/configs/: config1.json  config2.json  config3.json  config4.json  launcher.qs
Triangulation/: ani2d_routines.h  main.cpp
Triangulation/Triangulation_no_islands/: Makefile
Triangulation/Triangulation_thickening/: Makefile  ani2d_routines.h  coords_rotation.h  main.cpp  mapx_routines.h  parse_netcdf.py
Triangulation/Triangulation_thickening/concentration_data/: seaice_conc_monthly_nh_f17_201803_v03r01.nc  seaice_conc_monthly_nh_f17_201804_v03r01.nc  seaice_conc_monthly_nh_f17_201903_v03r01.nc  seaice_conc_monthly_nh_f17_201904_v03r01.nc
Triangulation/Triangulation_thickening/mapx-0.10/: report.c
Triangulation/Triangulation_thickening/triangulation_output/: bnd.txt
Triangulation/Triangulation_with_islands/: Makefile  main.cpp
Vasiliy/GRID_TO_PMF/: CMakeLists.txt  main.cpp
Vasiliy/ICE/: CMakeLists.txt  main.cpp
Vasiliy/ICE_1/: CMakeLists.txt  main.cpp
Vasiliy/ICE_2/: CMakeLists.txt  main.cpp
Vasiliy/ICE_2/gnu/: CMakeLists.txt
Vasiliy/ICE_2/intel/: CMakeLists.txt  main.cpp
Vasiliy/PARTITION/: CMakeLists.txt  main.cpp
ani2D-3.1/: ACKNOWLEDGEMENTS  CMakeLists.txt  ChangeLog  Makefile  README
ani2D-3.1/cmake/: do-cmake-intel  do-cmake-pgi
ani2D-3.1/data/: Dam.ani  VCR.txt  country.ani  crack.ani  disk.ani  guitar.ani  holes.ani  key.ani  odisk.ani  python.ani  shy.ani  simple.ani  simple2.ani  simple3.ani  sport.ani  square.ani  star.ani  tangled.ani  texas.ani  wing.ani
ani2D-3.1/data/front/: front2.txt  front_lake.txt
ani2D-3.1/lib/: README
ani2D-3.1/python/: CMakeLists.txt  Makefile  forlibaft.c  main.py  mainPYmba.f  mainPYstokes.f
ani2D-3.1/src/: Rules.make
ani2D-3.1/src/Tutorials/MultiPackage/ConvectionDiffusion/: CMakeLists.txt  Makefile  README  forlibfem.f  main.f
ani2D-3.1/src/Tutorials/MultiPackage/DiscontinuousGalerkin/: CMakeLists.txt  Makefile  README
ani2D-3.1/src/Tutorials/MultiPackage/HybridMixedFem/: Makefile  forlibfem.f
ani2D-3.1/src/Tutorials/MultiPackage/Interpolation/: Makefile  mainGrad.f
ani2D-3.1/src/Tutorials/MultiPackage/IsotropicBVP/: CMakeLists.txt  Makefile  forlibfem_est.f  forlibfem_hes.f
ani2D-3.1/src/Tutorials/MultiPackage/Stokes/: Makefile  (+2 more)
ani2D-3.1/src/Tutorials/PackageAFT/: Makefile  README  main_front1.f
ani2D-3.1/src/Tutorials/PackageC2F/: Makefile  main_analytic.c
ani2D-3.1/src/Tutorials/PackageFEM/: Makefile  README  mainTemplate.f  mainTriangle.f
ani2D-3.1/src/Tutorials/PackageILU/: Makefile
ani2D-3.1/src/Tutorials/PackageINB/: main_simple.f
ani2D-3.1/src/Tutorials/PackageLMR/: Makefile
ani2D-3.1/src/Tutorials/PackageLU/: Makefile
ani2D-3.1/src/Tutorials/PackageMBA/: Makefile
ani2D-3.1/src/Tutorials/PackagePRJ/: Makefile  README  a  main.f  main_bad.f
ani2D-3.1/src/Tutorials/PackageRCB/: Makefile
ani2D-3.1/src/Tutorials/PackageVIEW/: Makefile  README
ani2D-3.1/src/aniAFT/: Makefile  aft2d.c  tria2.c
ani2D-3.1/src/aniC2F/: Makefile  ani2D.c  ani2D.h
ani2D-3.1/src/aniFEM/: CMakeLists.txt  Makefile  dof.f  error.f  fem2Dtri.f  fem2Dtri.fd  opGRAD.f  opIDEN.f  template.f
ani2D-3.1/src/aniILU/: CMakeLists.txt  Makefile  iluoo.f
ani2D-3.1/src/aniINB/: Makefile  solver_inb.f
ani2D-3.1/src/aniLMR/: CMakeLists.txt  Lp_norm.f  Makefile  Nodal2MetricVAR.f  error.f
ani2D-3.1/src/aniMBA/: CMakeLists.txt  Makefile  calcrv.f  error.f  mba_analytic.f  mba_fixshape.f  mba_nodal.f
ani2D-3.1/src/aniPRJ/: CMakeLists.txt  Makefile  metamesh.f  rhs.f
ani2D-3.1/src/aniRCB/: CMakeLists.txt  Makefile  error.f
ani2D-3.1/src/aniVIEW/: Makefile  demo.f  mesh.f  mesh_full.f
jupyter/: TOPAZ-4.ipynb  Unstructured_grid_netcdf_example.ipynb
jupyter/.ipynb_checkpoints/: TOPAZ-4-checkpoint.ipynb  Unstructured_grid_netcdf_example-checkpoint.ipynb
(+15 files in other folders)
